@@ -21,6 +21,8 @@ IT_PROG_INTLTOOL([0.35.0])
 
 AM_PATH_PYTHON
 
+PKG_CHECK_MODULES(PYGTK, pygtk-2.0)
+
 AC_SUBST(VERSION)
 AC_SUBST(PACKAGE)
 
