@@ -1,3 +1,10 @@
+2009-02-27  Ben Van Mechelen  <me@benvm.be>
+
+	* aclocal.m4:
+	* configure.ac:
+	    Check for pygtk in configure
+	
+
 2009-02-19  Ben Van Mechelen  <me@benvm.be>
 
 	* aclocal.m4:
